--- a/src/components/code/code-js/js-practice/pages/elem-object.html
+++ b/src/components/code/code-js/js-practice/pages/elem-object.html
@@ -5,9 +5,9 @@
 <article class="article">
   <h2>Содержание</h2>
 
-    <p><a href="#links">links</a></p>
-    <p><a href="#t-1">Тема 1. Объединить два объекта</a></p>
-
+  <p><a href="#links">links</a></p>
+  <p><a href="#t-1">Объединить два объекта</a></p>
+  <p><a href="#t-2">Дан массив двух объектов, вернуть объект со свойствами из этих объектов</a></p>
 
 </article>
 
@@ -37,27 +37,58 @@ const b = {
   coffee: 'capuccino'
 }</pre>
 
-  <h4>1 способ. Оператор spread из es2018</h4>
+  <details>
+    <summary>1 способ. Оператор spread из es2018</summary>
+    <p>Здесь мы создаем новый пустой объект, после этого все свойства объекта a будут помещены в новый объект, затем все свойства объекта b будут помещены в новый объект.</p>
+    <p>Если свойства повторяются, то их значения будут взяты из объекта который идет последним. Таким образом можно объединять не только два объекта но и сколько угодно.</p>
+    <code>let c = {...a, ...b};</code>
+  </details>
 
-  <p>Здесь мы создаем новый пустой объект, после этого все свойства объекта a будут помещены в новый объект, затем все свойства объекта b будут помещены в новый объект.</p>
-  <p>Если свойства повторяются, то их значения будут взяты из объекта который идет последним. Таким образом можно объединять не только два объекта но и сколько угодно.</p>
-  <code>let c = {...a, ...b};</code>
+  <details>
+    <summary>2 способ. Метод Object.assign() из es6</summary>
+    <p>В метод Object.assign() первым параметром мы должны передать тот объект в который будут добавлены все свойства. После этого через запятую перечислим все объекты, чьи свойства мы хотим добавить в первый объект</p>
+    <p>Если свойства повторяются, то их значения будут взяты из объекта который идет последним. Таким образом можно объединять не только два объекта но и сколько угодно.</p>
+    <code>let d = Object.assign({}, a, b);</code>
+  </details>
 
-  <h4>2 способ. Метод Object.assign() из es6</h4>
-
-  <p>В метод Object.assign() первым параметром мы должны передать тот объект в который будут добавлены все свойства. После этого через запятую перечислим все объекты, чьи свойства мы хотим добавить в первый объект</p>
-  <p>Если свойства повторяются, то их значения будут взяты из объекта который идет последним. Таким образом можно объединять не только два объекта но и сколько угодно.</p>
-  <code>let d = Object.assign({}, a, b);</code>
-
-  <h4>3 способ. Цикл for in из es5</h4>
+  <details>
+    <summary>3 способ. Цикл for in из es5</summary>
   <p>Создадим новый объект. В цикле for in пройдем по всем свойствам первого объекта и запишем их в свойства нового объекта. Затем в цикле for in пройдем по всем свойствам второго объекта и запишем их в свойства нового объекта.</p>
 <pre>let e = {};
-  for (let prop in a) {
-    e[prop] = a[prop];
-  }
-  for (let prop in b) {
-    e[prop] = b[prop];
-  }</pre>
+for (let prop in a) {
+  e[prop] = a[prop];
+}
+for (let prop in b) {
+  e[prop] = b[prop];
+}</pre>
+  </details>
+</article>
+
+
+<!-- Тема 2. Дан массив двух объектов, вернуть объект со свойствами из этих объектов -->
+<article class="article">
+  <div class="anchor" id="t-2"></div>
+  <h3>Тема 2. Дан массив двух объектов, вернуть объект со свойствами из этих объектов</h3>
+
+  <p>Написать функцию, которая на вход получает массив объектов</p>
+<pre>let arr = [
+  {name: 'width', value: 10},
+  {name: 'height', value: 20}
+]</pre>
+
+  <p>А на выходе отдает объект со свойствами из этих объектов</p>
+  <code>{width: 10, height: 20}</code>
+
+  <details>
+    <summary>Решение</summary>
+<pre>function f(arr) {
+  const obj = {};
+  arr.forEach(ob => {
+    obj[ob.name] = ob.value;
+  })
+  return obj;
+}</pre>
+  </details>
 </article>
 
 
