--- a/src/components/front/front-edu/pages/elem-edu.html
+++ b/src/components/front/front-edu/pages/elem-edu.html
@@ -10,11 +10,10 @@
     <a href="#validator" class="contents__link">Validator</a>
     <a href="#code-guide" class="contents__link">Code guide</a>
     <a href="#logo" class="contents__link">Logo</a>
-    <a href="#fonts" class="contents__link">Fonts</a>
+    <a href="#fonts" class="contents__link">Icon Fonts Иконочные шрифты</a>
     <a href="#icons" class="contents__link">Icons</a>
     <a href="#favicon" class="contents__link">favicon</a>
     <a href="#background" class="contents__link">Background</a>
-    <a href="#colors" class="contents__link">Colors</a>
     <a href="#makets" class="contents__link">Макеты для верстки</a>
     <a href="#escape" class="contents__link">Символы для html</a>
     <a href="#css-js" class="contents__link">CSS и JS</a>
@@ -54,22 +53,10 @@
   </ol>
 </article>
 
-<!-- fonts -->
+<!-- Icon Fonts Иконочные шрифты -->
 <article class="article">
   <div class="anchor" id="fonts"></div>
-  <h2>Fonts</h2>
-  <ol>
-    <li><a href="https://fonts.google.com">fonts.google.com</a><br>шрифты google</li>
-    <li>
-      <a href="https://gwfh.mranftl.com/fonts">gwfh.mranftl.com/fonts</a>
-      <br>google-webfonts-helper скачать и подключить
-    </li>
-    <li><a href="https://fontstorage.com/ru/">fontstorage.com</a><br>шрифты fontstorage</li>
-    <li><a href="https://www.font2web.com/">font2web.com</a><br>шрифты font2web</li>
-    <li><a href="https://webfonts.pro">webfonts.pro</a><br>шрифты webfonts</li>
-    <li><a href="https://icomoon.io/">icomoon.io</a><br>иконочные шрифты</li>
-  </ol>
-  <h3>Icon Fonts Иконочные шрифты</h3>
+  <h2>Icon Fonts Иконочные шрифты</h2>
   <ol>
     <li><a href="https://fontawesome.ru/">fontawesome.ru</a><br>иконочные шрифты</li>
     <li><a href="https://fontawesome.com/">fontawesome.com</a><br>иконочные шрифты</li>
@@ -110,28 +97,6 @@
   </ol>
 </article>
 
-<!-- colors -->
-<article class="article">
-  <div class="anchor" id="colors"></div>
-  <h2>Colors Цвета для страницы</h2>
-  <ol>
-    <li>
-      <a href="https://encycolorpedia.ru/">encycolorpedia.ru</a>
-      <br>color
-    </li>
-
-    <li>
-      <a href="https://colorscheme.ru/html-colors.html">colorscheme.ru</a>
-      <br>colorscheme.ru
-    </li>
-
-    <li>
-      <a href="https://derzky.ru/generator-css-filtrov-dlja-zadannogo-cveta/">Генератор цветовых CSS фильтров из
-        заданного цвета</a>
-      <br><a href="https://cssmatic.com/box-shadow/">Генератор тени в CSS</a>
-    </li>
-  </ol>
-</article>
 
 <!-- makets -->
 <article class="article">
