--- a/src/components/front/front-vacancy/pages/elem-yandex.html
+++ b/src/components/front/front-vacancy/pages/elem-yandex.html
@@ -10,6 +10,10 @@
     <div>Хендбуки по ключевым IT-дисциплинам. Бесплатные онлайн-учебники для увлечённых IT. Теоретические материалы дополняются практикой — можно решать задачи и следить за своим прогрессом.</div>
   </li>
   <li>
+    <a href="https://education.yandex.ru/journal/algoritmicheskie-sobesedovaniya-v-yandekse-kak-podgotovitsya-i-chego-ozhidat">https://education.yandex.ru/journal/algoritmicheskie-sobesedovaniya-v-yandekse-kak-podgotovitsya-i-chego-ozhidat</a>
+    <div>Алгоритмические собеседования в Яндексе: как подготовиться и чего ожидать</div>
+  </li>
+  <li>
     <a href="https://education.yandex.ru/handbook/algorithms">https://education.yandex.ru/handbook/algorithms</a>
     <div>Основы алгоритмов</div>
   </li>
@@ -109,7 +113,11 @@
     <div>Советы для кандидатов: как мы нанимаем Фронтенд разработчиков</div>
   </li>
   <li>
-    <a href="https://habr.com/ru/companies/yandex/articles/449890/">https://habr.com/ru/companies/yandex/articles/449890/</a>
-    <div>Как проходят алгоритмические секции на собеседованиях в Яндекс (2019-05-07)</div>
+    <a href="https://yandex.ru/jobs/pages/multitrack">https://yandex.ru/jobs/pages/multitrack</a>
+    <div>multitrack  для разработчиков</div>
+  </li>
+  <li>
+    <a href="https://yandex.ru/jobs/professions/frontend-developer">https://yandex.ru/jobs/professions/frontend-developer</a>
+    <div>Открытые вакансии</div>
   </li>
 </ol>
