--- a/src/components/code/algorithm/js-coderun/pages/elem-yandex-01.html
+++ b/src/components/code/algorithm/js-coderun/pages/elem-yandex-01.html
@@ -21,6 +21,7 @@
   <p><a href="#task-5">5. Проверить число Фибоначчи</a></p>
   <p><a href="#task-6">6. Шахматная доска. Количество пар ладей, которые бьют друг друга</a></p>
   <p><a href="#task-7">7. Словарь с текстом и ударной буквой</a></p>
+  <p><a href="#task-8">8. Свернуть числа в диапазоны</a></p>
 </div>
 
 
@@ -175,6 +176,64 @@
   <p>Тут два варианта решения задачи - через Множества и через Словари.</p>
 </article>
 
+
+<!-- 8. Свернуть числа в диапазоны -->
+<article class="article">
+  <div class="anchor" id="task-8"></div>
+  <h2>8. Свернуть числа в диапазоны</h2>
+
+  <p>Дан список целых чисел, повторяющихся элементов в списке нет. Нужно преобразовать это множество в строку, сворачивая соседние по числовому ряду числа в диапазоны.</p>
+
+  <h4>Пример 1</h4>
+  <code>Input: [1,4,5,2,3,9,8,11,0]</code>
+  <code>Output: "0-5,8-9,11"</code>
+
+  <h4>Пример 2</h4>
+  <code>Input: [1,4,3,2]</code>
+  <code>Output: "1-4"</code>
+
+  <h4>Пример 3</h4>
+  <code>Input: [1,4]</code>
+  <code>Output: "1,4"</code>
+
+  <details>
+    <summary>Решение за O(NlogN)</summary>
+<pre>function enroll(nums) {
+  // отсортируем входной массив
+  let snums = nums.sort((a,b) => a - b);
+  let result = [];
+  // если массив пустой то в результат
+  // попадет пустая строка
+  let prev = snums[0] ?? '';
+  let start = prev;
+  let count = 1;
+
+  for (let i = 1; i &lt; snums.length; i++) {
+    const next = snums[i];
+    if (next - prev === 1) {
+      prev = next;
+      count++;
+    } else if (count === 1) {
+      result.push(start);
+      prev = next;
+      start = prev;
+    } else {
+      result.push(`${start}-${prev}`);
+      prev = next;
+      start = prev;
+      count = 1;
+    }
+  }
+  if (count === 1) {
+    result.push(start);
+  } else {
+    result.push(`${start}-${prev}`);
+  }
+
+  return result.join(',');
+}</pre>
+  </details>
+</article>
 
 
 
