--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -9,6 +9,7 @@ nav
   align-items: flex-end;
   flex-wrap: wrap;
   gap: 10px;
+  margin: 10px 0;
   padding: 10px 0;
   text-align: center;
   border: 5px solid white;
